add configure-bastion.yaml on main

--- a/main.yml
+++ b/main.yml
@@ -18,6 +18,6 @@
   tags:
     - prepare-bastion
 
-#- import_playbook: configure-bastion.yaml
-#  tags:
-#    - configure-bastion
+- import_playbook: configure-bastion.yaml
+  tags:
+    - configure-bastion
