--- a/create-workers.yaml
+++ b/create-workers.yaml
@@ -27,16 +27,43 @@
       qemu-img create -f qcow2 -o preallocation=metadata {{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2 150G
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
+    when:
+      - item.state == "present"
     with_items: "{{ worker_nodes }}"
 
-  - name: Defining the Overcloud workers
+  - name: Create two 200 GB OSD disks
+    shell: |
+      qemu-img create -f qcow2 -o preallocation=metadata {{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2 200G
+      qemu-img create -f qcow2 -o preallocation=metadata {{ item.hypervisor_image_dir }}/{{ item.name }}-osd-2.qcow2 200G
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    when:
+      - item.is_odf == "true"
+      - item.state == "present"
+    with_items: "{{ worker_nodes }}"
+
+  - name: Defining the workers
     shell: |
       virt-install --ram {{ worker_memory }} --vcpus {{ worker_cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.prov_mac }} --network bridge:{{ bridge_bm }},mac={{ item.bm_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
       virsh define /tmp/{{ item.name }}.xml
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
+    when:
+      - not item.is_odf == "true"
+      - item.state == "present"
     with_items: "{{ worker_nodes }}"
   
+  - name: Defining the ODF workers
+    shell: |
+      virt-install --ram {{ worker_memory }} --vcpus {{ worker_cpu }} --os-variant rhel8.5 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}.qcow2,device=disk,bus=virtio,format=qcow2 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2,device=disk,bus=virtio,format=qcow2 --disk path={{ item.hypervisor_image_dir }}/{{ item.name }}-osd-2.qcow2,device=disk,bus=virtio,format=qcow2 --noautoconsole --vnc --network bridge:{{ bridge_prov }},mac={{ item.prov_mac }} --network bridge:{{ bridge_bm }},mac={{ item.bm_mac }} --name {{ item.name }} --cpu host-passthrough --dry-run --print-xml > /tmp/{{ item.name }}.xml
+      virsh define /tmp/{{ item.name }}.xml
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    when:
+      - item.is_odf == "true"
+      - item.state == "present"
+    with_items: "{{ worker_nodes }}"
+
   # TODO: check ip address available in the hypervisor
   - name: Create virtualbmc interface
     shell: |
@@ -44,5 +71,7 @@
       vbmc start "{{ item.name }}"
     delegate_to: "{{ item.hypervisor_name }}"
     run_once: True
+    when:
+      - item.state == "present"
     with_items: "{{ worker_nodes }}"
 
