remove osd qcow on cleanup

--- a/cleanup.yaml
+++ b/cleanup.yaml
@@ -149,6 +149,30 @@
       - utility.qcow2
       - "{{ image }}"
 
+  - name: Remove odf osd-1 qcow2 files
+    file:
+      path: "{{ item.hypervisor_image_dir }}/{{ item.name }}-osd-1.qcow2"
+      state: absent
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    when:
+      - item.state == "present"
+    with_items:
+      - "{{ worker_nodes }}"
+    ignore_errors: True
+
+  - name: Remove odf osd-2 qcow2 files
+    file:
+      path: "{{ item.hypervisor_image_dir }}/{{ item.name }}-osd-2.qcow2"
+      state: absent
+    delegate_to: "{{ item.hypervisor_name }}"
+    run_once: True
+    when:
+      - item.state == "present"
+    with_items:
+      - "{{ worker_nodes }}"
+    ignore_errors: True
+
   - name: Remove ssh known hosts - bastion
     known_hosts:
       name: "{{ item.1 }}"
